<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editText_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/escribeAqui"
            android:inputType="text"
            android:textSize="20sp" />

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50sp" />

    </TableRow>
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dificultad"
            android:textSize="20sp" />
    </TableRow>
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <RadioGroup
            android:id="@+id/radioGroupDifficulties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonFacil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facil"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonDificil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dificil"
                android:textSize="16sp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_play"
            android:text="@string/jugar"
            android:textSize="20sp" />

    </TableRow>
    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="1sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonScoreBoard"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#006BBD"
                android:text="@string/puntuaciones"
                android:textAlignment="center" />

            <Space
                android:layout_width="20sp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonHelp"
                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:backgroundTint="#006BBD"
                android:text="@string/ayuda" />
        </LinearLayout>

    </TableRow>
</TableLayout>